# LongMath

./: .gitignore  CMakeLists.txt  MathTest.cpp  PiTest.cpp  main.cpp  pi.cpp  pi.h
LongNumber/: CMakeLists.txt  LongNumber.cpp  LongNumber.h
